--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
                         <div class="about__buttons">
                             <!--==================== Change your CV ====================-->
-                            <a download="" href="https://drive.google.com/file/d/1uZEURq1f-7Ja3aaRO2X7Dex7fu2LzrBf/view?usp=drive_link" class="button button--flex">
+                            <a download="" href="https://drive.google.com/file/d/1ynQcdFzhv31gErh5Q_21pYOzTJ45Igt6/view?usp=sharing" class="button button--flex">
                                 Download CV <i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
