--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <div class="home__social">
-                            <a href="https://www.linkedin.com/in/kanike-tejaswini-a4561122a/" target="_blank" class="home__social-icon">
+                            <a href="https://www.linkedin.com/in/tejaswini-k-a4561122a/" target="_blank" class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
     
@@ -171,7 +171,7 @@
 
                         <div class="about__buttons">
                             <!--==================== Change your CV ====================-->
-                            <a download="" href="https://drive.google.com/file/d/1ynQcdFzhv31gErh5Q_21pYOzTJ45Igt6/view?usp=sharing" class="button button--flex">
+                            <a download="" href="https://drive.google.com/file/d/1Pencrxr0yTaCp_e1lDrx0pzaJ7NsbuDb/view?usp=sharing" class="button button--flex">
                                 Download CV <i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
@@ -929,7 +929,7 @@
                     </div>
                 </div>
 
-                <p class="footer__copy">&#169; Bedimcode. All right reserved</p>
+                <p class="footer__copy">@Tejaswini Frontend developer. All right reserved</p>
             </div>
         </footer>
 
